[package]
name = "engine"
description = "Background animations for our P5 project."
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["GlennFolker", "Spacetier-X"]
license = "Apache-2.0"
repository = "https://github.com/Dalmonerio/P5/"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"

[dependencies]
bevy_asset_loader = "0.17"
rand = "0.8"

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "x11",
    "png",
    "webgl2",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
